--- a/frontend/src/components/AboutUs/AboutHero.css
+++ b/frontend/src/components/AboutUs/AboutHero.css
@@ -38,8 +38,10 @@
   font-size: 42px;
   font-weight: 700;
   line-height: 1.3;
-  color: #111827;
   margin-bottom: 20px;
+  background: linear-gradient(150deg, #0ea5e9, #84cc16);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .about-description {
