--- a/frontend/src/components/AboutUs/ContactSection.css
+++ b/frontend/src/components/AboutUs/ContactSection.css
@@ -13,10 +13,20 @@
 
 .contact-form-card {
   flex: 1;
-  background: radial-gradient(circle at top left, #3b82f6, #111827);
   padding: 50px;
   border-radius: 24px;
   color: #fff;
+  background: radial-gradient(
+      circle at 20% 20%,
+      rgba(14,165,233,0.15),
+      transparent 40%
+    ),
+    radial-gradient(
+      circle at 80% 80%,
+      rgba(132,204,22,0.12),
+      transparent 40%
+    ),
+    linear-gradient(135deg, #09172c, #0e1f3d);
 }
 
 .contact-form-card h3 {
@@ -67,16 +77,19 @@
   margin-top: 20px;
   padding: 14px;
   border: none;
-  border-radius: 50px;
-  background: #ff7a00;
+  border-radius: 20px;
+  background: linear-gradient(150deg, #0ea5e9, #84cc16);
   color: #fff;
   font-size: 16px;
   cursor: pointer;
   transition: 0.3s ease;
+  font-weight: 600;
+  width: 200px;
+  margin-left: 180px;
 }
 
 .contact-form-card button:hover {
-  background: #e66a00;
+  background: #84cc16;
 }
 
 .contact-info {
@@ -99,7 +112,9 @@
   font-size: 38px;
   font-weight: 700;
   margin-bottom: 40px;
-  color: #111827;
+  background: linear-gradient(150deg, #0ea5e9, #84cc16);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .country-cards {
