--- a/frontend/src/components/AboutUs/OurApproach.css
+++ b/frontend/src/components/AboutUs/OurApproach.css
@@ -30,7 +30,9 @@
   font-size: 42px;
   font-weight: 700;
   margin-bottom: 20px;
-  color: #111827;
+  background: linear-gradient(150deg, #0ea5e9, #84cc16);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .description {
