--- a/frontend/src/components/AboutUs/ServicesSection.css
+++ b/frontend/src/components/AboutUs/ServicesSection.css
@@ -13,7 +13,9 @@
 .services-titlee {
   font-size: 36px;
   font-weight: 700;
-  color: #0f172a;
+  background: linear-gradient(150deg, #0ea5e9, #84cc16);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   margin-bottom: 10px;
 }
 
