--- a/frontend/src/components/AboutUs/WhyChoose.css
+++ b/frontend/src/components/AboutUs/WhyChoose.css
@@ -13,7 +13,9 @@
   font-size: 44px;
   font-weight: 700;
   margin-bottom: 70px;
-  color: #111827;
+  background: linear-gradient(150deg, #0ea5e9, #84cc16);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .why-content {
