--- a/frontend/src/components/AboutUs/ServicesSection.css
+++ b/frontend/src/components/AboutUs/ServicesSection.css
@@ -13,7 +13,7 @@
 .services-titlee {
   font-size: 36px;
   font-weight: 700;
-  background: linear-gradient(150deg, #0ea5e9, #84cc16);
+  background: #0d5b96;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 10px;
