--- a/frontend/src/components/AboutUs/WhyChoose.css
+++ b/frontend/src/components/AboutUs/WhyChoose.css
@@ -13,7 +13,7 @@
   font-size: 44px;
   font-weight: 700;
   margin-bottom: 70px;
-  background: linear-gradient(150deg, #0ea5e9, #84cc16);
+  background: #0d5b96;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
