--- a/frontend/src/components/Homepage/CounterSection.css
+++ b/frontend/src/components/Homepage/CounterSection.css
@@ -1,6 +1,6 @@
 .counter-section {
   padding: 80px 0;
-  background: linear-gradient(10deg, #0ea5e9, #84cc16);
+  background: #0d5b96;
   color: hsl(0, 0%, 100%);
   
 }
