--- a/frontend/src/components/services page/Servicepage.css
+++ b/frontend/src/components/services page/Servicepage.css
@@ -30,13 +30,13 @@
   font-size: 52px;
   font-weight: 700;
   margin-bottom: 25px;
-  color: #222;
+  color: #0d5b96;
 }
 
 .hero-description {
   font-size: 18px;
   line-height: 1.6;
-  color: #555;
+  color: #0d5b96;
   margin-bottom: 35px;
   max-width: 500px;
 }
