--- a/frontend/src/components/AboutUs/OurApproach.css
+++ b/frontend/src/components/AboutUs/OurApproach.css
@@ -30,7 +30,7 @@
   font-size: 42px;
   font-weight: 700;
   margin-bottom: 20px;
-  background: linear-gradient(150deg, #0ea5e9, #84cc16);
+  background:#0d5b96;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -66,17 +66,6 @@
   box-shadow: 0 15px 35px rgba(0, 0, 0, 0.08);
 }
 
-.icon-box {
-  min-width: 60px;
-  height: 60px;
-  background: #f3f4f6;
-  border-radius: 16px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 24px;
-  color: #1f2937;
-}
 
 .card h3 {
   font-size: 18px;
@@ -100,7 +89,5 @@
     text-align: center;
   }
 
-  .icon-box {
-    margin-bottom: 15px;
-  }
+
 }
