--- a/frontend/src/components/Homepage/OurLeaders.css
+++ b/frontend/src/components/Homepage/OurLeaders.css
@@ -13,7 +13,7 @@
 
 .leaders-small-title {
   font-size: 14px;
-  color: #1f4e8c; /* logo blue */
+  color: #1f4e8c; 
   margin-bottom: 10px;
   letter-spacing: 1px;
 }
@@ -35,7 +35,7 @@
 .badgee {
   font-size: 60px;
   font-weight: 800;
-  background: linear-gradient(50deg, #0ea5e9, #84cc16);
+  background: #0d5b96;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   margin-bottom: 15px;
@@ -69,7 +69,7 @@
   height: 200px;
   margin: auto;
   border-radius: 50%;
-  background: linear-gradient(135deg, #0ea5e9, #84cc16);
+  background: #0d5b96;
   padding: 6px;
   display: flex;
   align-items: center;
