--- a/frontend/src/components/Technologies/TechnologiesSection.css
+++ b/frontend/src/components/Technologies/TechnologiesSection.css
@@ -40,8 +40,6 @@
   position: relative;
 }
 
-}
-
 .slider-container:hover .slider-track {
   animation-play-state: paused;
 }
@@ -53,6 +51,7 @@
   border-radius: 16px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .tech-card img {
