--- a/frontend/src/components/Homepage/WhatWeBuild.css
+++ b/frontend/src/components/Homepage/WhatWeBuild.css
@@ -15,7 +15,11 @@
   padding-right: 30px;
 }
 
-/* LEFT SIDE */
+.wwb-left {
+  flex: 0 0 30%;
+  position: sticky;
+  top: 100px;
+}
 
 .wwb-title {
   font-size: clamp(36px, 5vw, 60px);
@@ -32,7 +36,7 @@
   max-width: 480px;
 }
 
-.build-ctaa{
+.build-ctaa {
   margin-left: 70px;
 }
 
@@ -52,8 +56,6 @@
   transform: translateY(-4px);
   box-shadow: 0 15px 35px rgba(13, 91, 150, 0.3);
 }
-
-/* RIGHT GRID */
 
 .wwb-grid {
   display: grid;
@@ -92,8 +94,6 @@
   color: #64748b;
   line-height: 1.6;
 }
-
-/* RESPONSIVE */
 
 @media (max-width: 992px) {
   .wwb-container {
